k8s/orchestrator.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator-depl
spec:
  selector:
    matchLabels:
      app: orchestrator
  template:
    metadata:
      labels:
        app: orchestrator
    spec:
      containers:
        - name: orchestrator
          image: afif1400/orchestrator-service
          ports:
            - containerPort: 5000
              name: orchestrator
              protocol: TCP
          resources:
            limits:
              cpu: "500m"
              memory: "2048Mi"
          volumeMounts:
            - name: docker-socket
              mountPath: /var/run/docker.sock
      volumes:
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock

---
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-srv
spec:
  selector:
    app: orchestrator
  ports:
    - port: 5000
      targetPort: 5000
      name: orchestrator
      protocol: TCP
