k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: ingress
spec:
  rules:
    - host: app.ucmdls.dev
      http:
        paths:
          - path: /api/orchestrator/?(.*)
            pathType: Prefix
            backend:
              service:
                name: orchestrator-srv
                port:
                  number: 5000
